--- a/index.html
+++ b/index.html
@@ -17,18 +17,15 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="header-logo" />
+      <div class="header__logo-box">
+        <img src="img/logo-white-my2.png" alt="Logo" class="header__logo" />
       </div>
-      <div class="header-text-box">
+      <div class="header__text-box">
         <div class="heading-primary">
-          <span class="heading-primary-main">outdoors</span>
-          <span class="heading-primary-sub">Is where life happens</span>
+          <span class="heading-primary--main">outdoors</span>
+          <span class="heading-primary--sub">Is where life happens</span>
         </div>
-
-        <a href="#section-tours" class="btn btn-white btn-animated"
-          >Discover our tours</a
-        >
+        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
   </body>
