--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <div class="header__logo-box">
-        <img src="img/logo-white-my2.png" alt="Logo" class="header__logo" />
+        <img src="img/logo-white-my2.png" alt="Logo" class="header__logo" = />
       </div>
       <div class="header__text-box">
         <div class="heading-primary">
