--- a/index.html
+++ b/index.html
@@ -25,8 +25,71 @@
           <span class="heading-primary--main">outdoors</span>
           <span class="heading-primary--sub">Is where life happens</span>
         </div>
-        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated"
+          >Discover our tours</a
+        >
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Exciting tours for advetures people</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to falling inlove in nature</h3>
+            <p class="paragraph">
+              lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum, deleniti accusamus corrupti minima quibusdam fugiat iste voluptas veritatis laborum vitae culpa temporibus incidunt perspiciatis quidem, commodi, doloremque voluptatem atque!
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have before</h3>
+            <p class="paragraph">
+              lor ipsum dolor sit amet, consectetur adipisicing elit.  Vel rerum, deleniti accusamus corrupti minima quibusdam fugiat iste .
+            </p>
+
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="Photo2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="Photo3" class="composition__photo composition__photo--p3">
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- <section class="grid-test">
+        <div class="row">
+            <div class="col-1-of-1">1 of 1</div>
+          </div>
+      <div class="row">
+        <div class="col-1-of-2">1 of 2</div>
+        <div class="col-1-of-2">1 of 2</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">1 of 3</div>
+        <div class="col-1-of-3">1 of 3</div>
+        <div class="col-1-of-3">1 of 3</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">1 of 3</div>
+        <div class="col-2-of-3">2 of 3</div>
+      </div> 
+      <div class="row">
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-1-of-4">1 of 4</div>
+        <div class="col-2-of-4">2 of 4</div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">1 of 3</div>
+        <div class="col-3-of-4">3 of 4</div>
+      </div>
+    </section> -->
   </body>
 </html>
