--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     />
 
     <!-- <link rel="stylesheet" href="css/icon-font.css" asd> -->
+    <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
+
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
@@ -37,22 +39,102 @@
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="heading-tertiary u-margin-bottom-small">You're going to falling inlove in nature</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to falling inlove in nature
+            </h3>
             <p class="paragraph">
-              lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum, deleniti accusamus corrupti minima quibusdam fugiat iste voluptas veritatis laborum vitae culpa temporibus incidunt perspiciatis quidem, commodi, doloremque voluptatem atque!
+              lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum,
+              deleniti accusamus corrupti minima quibusdam fugiat iste voluptas
+              veritatis laborum vitae culpa temporibus incidunt perspiciatis
+              quidem, commodi, doloremque voluptatem atque!
             </p>
-            <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have before</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventurous like you never have before
+            </h3>
             <p class="paragraph">
-              lor ipsum dolor sit amet, consectetur adipisicing elit.  Vel rerum, deleniti accusamus corrupti minima quibusdam fugiat iste .
+              lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum,
+              deleniti accusamus corrupti minima quibusdam fugiat iste .
             </p>
 
             <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/nat-1-large.jpg" alt="Photo1" class="composition__photo composition__photo--p1">
-              <img src="img/nat-2-large.jpg" alt="Photo2" class="composition__photo composition__photo--p2">
-              <img src="img/nat-3-large.jpg" alt="Photo3" class="composition__photo composition__photo--p3">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="Photo1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="Photo2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="Photo3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary  u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
+                quaerat quia suscipit magni. Est reiciendis corporis animi,
+                quidem quasi facere cumque asperiores illum sed ea ratione
+                deleniti incidunt vero beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary  u-margin-bottom-small">
+                  Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
+                quaerat quia suscipit magni. Est reiciendis corporis animi,
+                quidem quasi facere cumque asperiores illum sed ea ratione
+                deleniti incidunt vero beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary  u-margin-bottom-small">
+                Live a healthier live
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
+                quaerat quia suscipit magni. Est reiciendis corporis animi,
+                quidem quasi facere cumque asperiores illum sed ea ratione
+                deleniti incidunt vero beatae.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary  u-margin-bottom-small">
+                Eplore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
+                quaerat quia suscipit magni. Est reiciendis corporis animi,
+                quidem quasi facere cumque asperiores illum sed ea ratione
+                deleniti incidunt vero beatae.
+              </p>
             </div>
           </div>
         </div>
