--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
               <h3 class="heading-tertiary  u-margin-bottom-small">
-                  Find your way
+                Find your way
               </h3>
               <p class="feature-box__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum
@@ -135,6 +135,61 @@
                 quidem quasi facere cumque asperiores illum sed ea ratione
                 deleniti incidunt vero beatae.
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture--1">&nbsp;</div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                      The sea explorer
+                  </span>
+                  </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 Days tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tours guides</li>
+                    <li>Cozy hotels</li>
+                    <li>Difficulty:easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                  <div class="card__picture card__picture--2">&nbsp;</div>
+                  <div class="card__heading">Heading</div>
+                  <div class="card__details">Deatils</div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                  <div class="card__picture card__picture--3">&nbsp;</div>
+                  <div class="card__heading">Heading</div>
+                  <div class="card__details">Deatils</div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                Back
+              </div>
             </div>
           </div>
         </div>
