--- a/index.html
+++ b/index.html
@@ -231,7 +231,35 @@
                   </div>
                   <a href="#" class="btn btn--white">Book now!</a>
                 </div>
-              </div>
+              </div> 
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+                <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+            </figure>
+            <div class="story__text">
+
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <p class="paragraph">
+                lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum,
+                deleniti accusamus corrupti minima quibusdam fugiat iste voluptas
+                veritatis laborum vitae culpa temporibus incidunt perspiciatis
+                quidem, commodi, doloremque voluptatem atque!
+                 deleniti accusamus corrupti minima quibusdam fugiat iste voluptas
+                veritatis laborum vitae culpa temporibus incidunt perspiciatis
+                quidem, commodi, doloremque voluptatem atque!
+              </p>
             </div>
           </div>
         </div>
