--- a/index.html
+++ b/index.html
@@ -240,13 +240,21 @@
         </div>
       </section>
       <section class="section-stories">
+        <div class="bg-video">
+          <video  class="bg-video__content" autoplay muted loop>
+            <source src="/img/video.mp4" type="video/mp4">
+            <source src="/img/video.webm" type="video/webm">
+              Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-                <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                <img  class="story__img" src="img/nat-8.jpg" alt="Person on a tour">
+                <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
 
@@ -263,6 +271,30 @@
             </div>
           </div>
         </div>
+        <div class="row">
+            <div class="story">
+              <figure class="story__shape">
+                  <img class="story__img" src="img/nat-9.jpg" alt="Person on a tour" >
+                  <figcaption class="story__caption">Jack Wilson</figcaption>
+              </figure>
+              <div class="story__text">
+  
+                <h3 class="heading-tertiary u-margin-bottom-small">Wow!!! my life is completly diffrents now</h3>
+                <p class="paragraph">
+                  lor ipsum dolor sit amet, consectetur adipisicing elit. Vel rerum,
+                  deleniti accusamus corrupti minima quibusdam fugiat iste voluptas
+                  veritatis laborum vitae culpa temporibus incidunt perspiciatis
+                  quidem, commodi, doloremque voluptatem atque!
+                   deleniti accusamus corrupti minima quibusdam fugiat iste voluptas
+                  veritatis laborum vitae culpa temporibus incidunt perspiciatis
+                  quidem, commodi, doloremque voluptatem atque! veritatis laborum vitae culpa temporibus incidunt perspiciatis
+                </p>
+              </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+              </div>
       </section>
     </main>
     <!-- <section class="grid-test">
