--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
       <section class="section-stories">
         <div class="bg-video">
           <video  class="bg-video__content" autoplay muted loop>
-            <source src="/img/video.mp4" type="video/mp4">
-            <source src="/img/video.webm" type="video/webm">
+            <!-- taken from here https://coverr.co -->
+            <source src="/img/Coconut-Grove.mp4" type="video/mp4">
+            <source src="/img/Coconut-Grove.webm" type="video/webm">
               Your browser is not supported!
           </video>
         </div>
