--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
         <div class="bg-video">
           <video  class="bg-video__content" autoplay muted loop>
             <!-- taken from here https://coverr.co -->
-            <source src="/img/Coconut-Grove.mp4" type="video/mp4">
-            <source src="/img/Coconut-Grove.webm" type="video/webm">
+            <source src="/img/video.mp4" type="video/mp4">
+            <source src="/img/video.webm" type="video/webm">
               Your browser is not supported!
           </video>
         </div>
